1. Обновлено свечение 2. Реализован билдинг exe приложения